$Id$

History for IMDBPHP2
====================

v2.1.9
-------------------
! imdb::alsoknow() and imdb::releaseInfo() were broken due to site changes
! imdbperson::filmograf() missed some character names due to site changes
! imdb::soundtrack() was broken due to site changes
! imdb_person: latest site changes broke all filmografies. fixed.
! imdb: crazy_credits(), goofs(), quotes() broken due to site changes

v2.1.8 (26.05.2013)
-------------------
* improvements to the imdb::soundtrack() method. Much better results now :)
+ imdb_person::filmograf() now fills the "addons" information again (for all movie_*() methods)
! imdb_person: articles(), interviews() returned garbage if that information was not available
! Moviepilot changed API-error message, so instead of displaying the according error we had empty result sets
! rewrote movieposterdb::parse_list() -- so now the movie posters, logos, covers, etc. should work again
+ added imdb::orig_title() to retrieve the original movie title (if available; otherwise returns "")
+ added imdb::movie_recommendations() to retrieve the "people who liked this..." movies
* imdb_person::spouse() was missing detail information (most likely due to site changes) -- added them back
! fixed a bunch of notices in person.php and imdb_person.class.php

v2.1.7 (15.05.2013)
-------------------
! site changes again. Fixed: imdb::keywords_all(), imdb::taglines(), imdb:quotes(), imdb::trailers()
! also due to site changes: fixed imdb::soundtrack() and extended it: soundtrack[i][credit] is now an array[credit_to,desc]
! fixed imdb::genres() returning duplicate genres due to some added SPANs
* some cleanup for the plot outline in imdb::plotoutline()
! fixed imdb::get_episode_details() broken due to site changes
! fixed imdb::comment_split() broken due to site changes
! fixed company credits (all four methods have been broken due to site changes)
* removed some garbage preceding the storyline returned by imdb::storyline()