@@ -9,7 +9,8 @@ v2.1.9
 ! imdbperson::filmograf() missed some character names due to site changes
 ! imdb::soundtrack() was broken due to site changes
 ! imdb_person: latest site changes broke all filmografies. fixed.
-! imdb: crazy_credits(), goofs(), quotes() broken due to site changes
+! imdb: crazy_credits(), goofs(), quotes(), video_sites() broken due to site changes
++ while fixing imdb::video_sites, discovered more similar content on that page: soundclip_sites(), photo_sites() and misc_sites() added
 
 v2.1.8 (26.05.2013)
 -------------------
